--- a/BITSIER/src/app/app.html
+++ b/BITSIER/src/app/app.html
@@ -1,19 +1,44 @@
-<ion-menu [content]="content">
+<ion-menu [content]="mainContent">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu</ion-title>
+      <ion-title>
+        Menu
+      </ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <ion-content>
-    <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
-      </button>
+  <ion-content id="side-menu21" style="background-color:#;">
+    <ion-list id="menu-list1">
+      <ion-item color="positive" menuClose="" on-click="goToBITSIER()" id="menu-list-item1">
+        Home
+        <ion-icon name="home" item-right></ion-icon>
+      </ion-item>
+      <ion-item color="none" menuClose="" on-click="goToBITSIER2()" id="menu-list-item3">
+        News Stand
+        <ion-icon name="paper" item-right></ion-icon>
+      </ion-item>
+      <ion-item color="none" menuClose="" on-click="goToSearchItems()" id="menu-list-item2">
+        Shop
+        <ion-icon name="cart" item-right></ion-icon>
+      </ion-item>
+    </ion-list>
+    <ion-list id="menu-list3">
+      <ion-item color="none" id="menu-list-item5">
+        Time Table
+        <ion-icon name="book" item-right></ion-icon>
+      </ion-item>
+      <ion-item color="none" menuClose="" on-click="goToFeedback()" id="menu-list-item28">
+        Feedback
+        <ion-icon name="information-circle" item-right></ion-icon>
+      </ion-item>
+    </ion-list>
+    <div class="spacer" style="width:268px;height:181px;" id="menu-spacer1"></div>
+    <ion-list id="menu-list2">
+      <ion-item color="assertive" id="menu-list-item4">
+        Logout
+        <ion-icon name="log-out" item-right></ion-icon>
+      </ion-item>
     </ion-list>
   </ion-content>
-
 </ion-menu>
 
-<!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<ion-nav #mainContent [root]="rootPage"></ion-nav>
