--- a/BITSIER/src/app/app.html
+++ b/BITSIER/src/app/app.html
@@ -10,7 +10,7 @@
     <ion-list id="menu-list1">
       <ion-item color="positive" menuClose="" on-click="goToBITSIER()" id="menu-list-item1">
         Home
-        <ion-icon name="home" item-right></ion-icon>
+        <ion-icon color="royal" name="home" item-right></ion-icon>
       </ion-item>
       <ion-item color="none" menuClose="" on-click="goToBITSIER2()" id="menu-list-item3">
         News Stand
@@ -29,10 +29,10 @@
         Feedback
         <ion-icon name="information-circle" item-right></ion-icon>
       </ion-item>
-    <div class="spacer" style="width:268px;height:181px;" id="menu-spacer1"></div>
-      <ion-item color="assertive" id="menu-list-item4">
+    <div class="spacer" style="width:268px;height:281px;" id="menu-spacer1"></div>
+      <ion-item color="danger" id="menu-list-item4">
         Logout
-        <ion-icon name="log-out" item-right></ion-icon>
+        <ion-icon color="danger" name="log-out" item-right></ion-icon>
       </ion-item>
     </ion-list>
   </ion-content>
