--- a/BITSIER/src/app/app.html
+++ b/BITSIER/src/app/app.html
@@ -6,8 +6,12 @@
       </ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-content id="side-menu21" style="background-color:#;">
+  <ion-content id="side-menu21" style="background-color:#D1DBDD;">
     <ion-list id="menu-list1">
+      <ion-item color="positive" menuClose="" on-click="goToProfile()" id="menu-list-item1">
+        Profile
+        <ion-icon color="royal" name="home" item-right></ion-icon>
+      </ion-item>
       <ion-item color="positive" menuClose="" on-click="goToBITSIER()" id="menu-list-item1">
         Home
         <ion-icon color="royal" name="home" item-right></ion-icon>
