--- a/BITSIER/src/theme/variables.scss
+++ b/BITSIER/src/theme/variables.scss
@@ -34,10 +34,11 @@ $headings-font-weight: 300;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #3b59aa,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
+  metal:      #D1DBDD,
   dark:       #222,
   favorite:   #69BB7B,
   twitter:    #1da1f4,
